v0 of getting summary is done (#6)
* v0 of getting summary is done

* prompt template and static factories for response with errors

* fixed the error in exception handler, removed some comments, changed user agent to list of

* Code refactor, removed constants in between code

* formatting change only

---------

Co-authored-by: Vishal <email@email.email>